--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "serverDev": "nodemon server/server.js",
     "dev": "parcel src/*.html",
-    "build": "parcel src/*.html"
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "nodemailer": "^6.4.6"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "nodemon": "^2.0.3"
   }
 }
