--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "serverDev": "nodemon server/server.js",
     "dev": "parcel src/*.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/*.html"
   },
   "repository": {
     "type": "git",
